# CEC13-CEC17

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
CEC2013/: config.py  main.py  results.py  runner.py  summarize.py
CEC2013/algorithms/: __init__.py  fisa.py  rao1.py  rao2.py  rao3.py
CEC2013/utils/: __init__.py  population.py  raw_data_exporter.py
