[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CEC13-CEC17"
version = "0.1.1"
authors = [
  { name="Lakshya Maheshwari", email="lakshymaheshwari27@gmail.com" },
]
description = "Unified CEC2013 & CEC2017 Benchmark Optimization Suite"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.3",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["CEC2013*", "CEC2017*"]
